--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "@iden3/js-iden3-auth": "^1.0.0-beta.1",
     "crypto": "^1.0.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "nodemon": "^2.0.21"
+    "express": "^4.18.2"
   }
 }
